# moku

./: Cargo.toml  README.md  notes.md
.github/workflows/: rust.yml
examples/: README.md  blinky.rs  event_queue.rs  events.rs  new_direction.rs  test_mock.rs  transition_table.rs
moku-macros/: Cargo.toml  README.md
moku-macros/src/: lib.rs  metadata.rs  unpacker.rs  util.rs  visitor.rs  writer.rs
moku-macros/tests/: compile_fail.rs
moku-macros/tests/machine_module/: not_on_module.rs  not_on_module.stderr
src/: input.rs  lib.rs  output.rs
tests/: basic.rs  blinky.rs  compile_fail.rs  compile_pass.rs  comprehensive.rs  default_state_actions.rs  events.rs  exact_transition.rs  simple.rs  state_transitions.rs  top_transitions.rs  update_transitions.rs
tests/compile_fail/event/: event_impl_on_generic.rs  event_impl_on_generic.stderr  multiple_event_types.rs  multiple_event_types.stderr
tests/compile_fail/machine_module/: attr_not_on_module.rs  attr_not_on_module.stderr  attribute_with_args.rs  attribute_with_args.stderr  attribute_with_value.rs  attribute_with_value.stderr  inline_module.rs  inline_module.stderr  multiple_attrs.rs  multiple_attrs.stderr  multiple_definitions.rs  multiple_definitions.stderr  non_empty_module.rs  non_empty_module.stderr  not_on_module.stderr
tests/compile_fail/state/: attr_not_on_impl.rs  attr_not_on_impl.stderr  attr_not_on_state_impl.stderr  context_type_defined.rs  context_type_defined.stderr  event_type_defined.rs  event_type_defined.stderr  foreign_struct_def_no_enter.rs  foreign_struct_def_no_enter.stderr  invalid_superstate.rs  invalid_superstate.stderr  multiple_superstate_args.rs  multiple_superstate_args.stderr  multiple_superstate_attrs.rs  multiple_superstate_attrs.stderr  multiple_superstate_impls.rs  multiple_superstate_impls.stderr  multiple_top_states.rs  multiple_top_states.stderr  no_enter_def.rs  no_enter_def.stderr  no_struct_def.rs  no_struct_def.stderr  no_superstate_arg.rs  no_superstate_arg.stderr  no_superstate_attr.rs  no_superstate_attr.stderr  no_superstate_parens.rs  no_superstate_parens.stderr  not_on_impl.stderr  not_on_state_impl.rs  not_on_state_impl.stderr  pass.rs  self_superstate.rs  self_superstate.stderr  state_has_generic_params.rs  state_has_generic_params.stderr  state_impl_on_qualified.rs  state_impl_on_qualified.stderr  state_impl_on_ref.rs  (+21 more)
tests/compile_pass/: foreign_struct_defs.rs  fully_qualified.rs  qualified.rs  unqualified.rs
tests/no-std/: Cargo.toml
(+16 files in other folders)
