[package]
name = "moku"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Placeholder under active development."
homepage = "https://github.com/harrisonmg/moku"
repository = "https://github.com/harrisonmg/moku"
readme = "README.md"

[workspace]

[dependencies]
log = "0.4.22"
moku-macros = { version = "0.1.0", path = "moku-macros" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
test-log = "0.2.16"
