[package]
name = "moku"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for creating hierarchical state machines (HSM)"
homepage = "https://github.com/harrisonmg/moku"
repository = "https://github.com/harrisonmg/moku"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
 "tests/no-std"
]

[features]
default = ["std"]
std = ["moku-macros/std"]

[dependencies]
log = "0.4.22"
moku-macros = { version = "0.3.0", path = "moku-macros" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
env_logger = "0.11.6"
test-log = "0.2.16"
trybuild = { version = "1.0.101", features = ["diff"] }
