[package]
name = "moku-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macros for use with the moku crate."
homepage = "https://github.com/harrisonmg/moku"
repository = "https://github.com/harrisonmg/moku"
readme = "README.md"

[lib]
proc-macro = true

[features]
std = []

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"

[dependencies.syn]
version = "2.0.93"
default-features = false
features = [ "full", "parsing", "printing", "visit", "visit-mut", "proc-macro" ]
